[gd_scene load_steps=2 format=3 uid="uid://7vwe7yn58fff"]

[ext_resource type="Script" path="res://Scenes/Tech Stuff/hud.gd" id="1_iqgpc"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqgpc")

[node name="scoreText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 104.0
offset_right = 33.0
offset_bottom = 173.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "0"

[node name="messageText" type="Label" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 24.0
offset_right = 722.0
offset_bottom = 93.0
theme_override_font_sizes/font_size = 50
text = "Fruit Basket"

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_left = 544.0
offset_top = 376.0
offset_right = 609.0
offset_bottom = 453.0
theme_override_font_sizes/font_size = 50
text = "<3"

[node name="messageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="stopWatchText" type="Label" parent="."]
layout_mode = 0
offset_left = 560.0
offset_right = 600.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 25
text = "0
"

[node name="stopWatchText2" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 247.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
text = "Tip: use AD or LEFTRIGHT to move"

[node name="stopWatch" type="Timer" parent="."]

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="messageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="timeout" from="stopWatch" to="." method="_on_stop_watch_timeout"]
